--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </div>
                 <!-- D -->
                 <div class="col-12 col-md-6 col-xl-4">
-                    <section id="a-section" class="py-5">
+                    <section id="d-section" class="py-5">
                         <h2>D</h2>
                         <div class="accordion" id="accordionExampleSectionD">
                             <div class="accordion-item">
@@ -282,7 +282,7 @@
                 </div>
                 <!-- E -->
                 <div class="col-12 col-md-6 col-xl-4">
-                    <section id="b-section" class="py-5">
+                    <section id="e-section" class="py-5">
                         <h2>E</h2>
                         <div class="accordion" id="accordionExampleSectionE">
                             <div class="accordion-item">
@@ -326,7 +326,7 @@
                 </div>
                 <!-- F -->
                 <div class="col-12 col-md-6 col-xl-4">
-                    <section id="c-section" class="py-5">
+                    <section id="f-section" class="py-5">
                         <h2>F</h2>
                         <div class="accordion" id="accordionExampleSectionF">
                             <div class="accordion-item">
