--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     </header>
     <main class="glosary-content">
         <div class="container">
-            <div class="row">
+            <div class="row" data-masonry='{"percentPosition": true, "itemSelector": ".glosary-item" }'>
                 <!-- A -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="a-section" class="py-5">
                         <h2>A</h2>
                         <div class="accordion" id="accordionExampleSectionA">
@@ -149,7 +149,7 @@
                     </section>
                 </div>
                 <!-- B -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="b-section" class="py-5">
                         <h2>B</h2>
                         <div class="accordion" id="accordionExampleSectionB">
@@ -193,7 +193,7 @@
                     </section>
                 </div>
                 <!-- C -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="c-section" class="py-5">
                         <h2>C</h2>
                         <div class="accordion" id="accordionExampleSectionC">
@@ -237,7 +237,7 @@
                     </section>
                 </div>
                 <!-- D -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="d-section" class="py-5">
                         <h2>D</h2>
                         <div class="accordion" id="accordionExampleSectionD">
@@ -281,7 +281,7 @@
                     </section>
                 </div>
                 <!-- E -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="e-section" class="py-5">
                         <h2>E</h2>
                         <div class="accordion" id="accordionExampleSectionE">
@@ -325,7 +325,7 @@
                     </section>
                 </div>
                 <!-- F -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="f-section" class="py-5">
                         <h2>F</h2>
                         <div class="accordion" id="accordionExampleSectionF">
@@ -369,7 +369,7 @@
                     </section>
                 </div>
                 <!-- G -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="g-section" class="py-5">
                         <h2>g</h2>
                         <div class="accordion" id="accordionExampleSectionG">
@@ -413,7 +413,7 @@
                     </section>
                 </div>
                 <!-- H -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="h-section" class="py-5">
                         <h2>H</h2>
                         <div class="accordion" id="accordionExampleSectionH">
@@ -457,7 +457,7 @@
                     </section>
                 </div>
                 <!-- i -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="i-section" class="py-5">
                         <h2>i</h2>
                         <div class="accordion" id="accordionExampleSectionI">
@@ -501,7 +501,7 @@
                     </section>
                 </div>
                 <!-- J -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="j-section" class="py-5">
                         <h2>j</h2>
                         <div class="accordion" id="accordionExampleSectionJ">
@@ -545,7 +545,7 @@
                     </section>
                 </div>
                 <!-- K -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="k-section" class="py-5">
                         <h2>K</h2>
                         <div class="accordion" id="accordionExampleSectionK">
@@ -589,7 +589,7 @@
                     </section>
                 </div>
                 <!-- L -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="l-section" class="py-5">
                         <h2>l</h2>
                         <div class="accordion" id="accordionExampleSectionL">
@@ -633,7 +633,7 @@
                     </section>
                 </div>
                 <!-- M -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="m-section" class="py-5">
                         <h2>m</h2>
                         <div class="accordion" id="accordionExampleSectionM">
@@ -677,7 +677,7 @@
                     </section>
                 </div>
                 <!-- N -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="n-section" class="py-5">
                         <h2>n</h2>
                         <div class="accordion" id="accordionExampleSectionN">
@@ -721,7 +721,7 @@
                     </section>
                 </div>
                 <!-- o -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="o-section" class="py-5">
                         <h2>o</h2>
                         <div class="accordion" id="accordionExampleSectionO">
@@ -765,7 +765,7 @@
                     </section>
                 </div>
                 <!-- p -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="p-section" class="py-5">
                         <h2>p</h2>
                         <div class="accordion" id="accordionExampleSectionP">
@@ -809,7 +809,7 @@
                     </section>
                 </div>
                 <!-- Q -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="q-section" class="py-5">
                         <h2>q</h2>
                         <div class="accordion" id="accordionExampleSectionQ">
@@ -853,7 +853,7 @@
                     </section>
                 </div>
                 <!-- R -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="r-section" class="py-5">
                         <h2>r</h2>
                         <div class="accordion" id="accordionExampleSectionR">
@@ -897,7 +897,7 @@
                     </section>
                 </div>
                 <!-- S -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="s-section" class="py-5">
                         <h2>s</h2>
                         <div class="accordion" id="accordionExampleSectionS">
@@ -941,7 +941,7 @@
                     </section>
                 </div>
                 <!-- T -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="t-section" class="py-5">
                         <h2>t</h2>
                         <div class="accordion" id="accordionExampleSectionT">
@@ -985,7 +985,7 @@
                     </section>
                 </div>
                 <!-- U -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="u-section" class="py-5">
                         <h2>u</h2>
                         <div class="accordion" id="accordionExampleSectionU">
@@ -1029,7 +1029,7 @@
                     </section>
                 </div>
                 <!-- V -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="v-section" class="py-5">
                         <h2>v</h2>
                         <div class="accordion" id="accordionExampleSectionV">
@@ -1073,7 +1073,7 @@
                     </section>
                 </div>
                 <!-- W -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="w-section" class="py-5">
                         <h2>w</h2>
                         <div class="accordion" id="accordionExampleSectionW">
@@ -1117,7 +1117,7 @@
                     </section>
                 </div>
                 <!-- X -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="x-section" class="py-5">
                         <h2>x</h2>
                         <div class="accordion" id="accordionExampleSectionX">
@@ -1161,7 +1161,7 @@
                     </section>
                 </div>
                 <!-- Y -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="y-section" class="py-5">
                         <h2>y</h2>
                         <div class="accordion" id="accordionExampleSectionY">
@@ -1205,7 +1205,7 @@
                     </section>
                 </div>
                 <!-- Z -->
-                <div class="col-12 col-lg-6 col-xxl-4">
+                <div class="col-12 col-lg-6 col-xxl-4 glosary-item">
                     <section id="z-section" class="py-5">
                         <h2>z</h2>
                         <div class="accordion" id="accordionExampleSectionZ">
@@ -1255,5 +1255,7 @@
 
     </footer>
     <script src="assets/bootstrap-5.3.2/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
