--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <header>
+    <header class="position-fixed w-100 z-3 mt-0 top-0">
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <h1><a class="navbar-brand" href="#">Glosario</a></h1>
@@ -28,7 +28,7 @@
                                 Claro
                                 </button>
                             </li>
-                            <i>
+                            <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-stars-fill me-2 opacity-50 theme-icon" viewBox="0 0 16 16">
                                     <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
@@ -48,89 +48,89 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="glosary-nav list-inline">
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#a-section">a</a>
+                        <a class="nav-link border" href="#a-section">a</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#b-section">b</a>
+                        <a class="nav-link border" href="#b-section">b</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#c-section">c</a>
+                        <a class="nav-link border" href="#c-section">c</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#d-section">d</a>
+                        <a class="nav-link border" href="#d-section">d</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#e-section">e</a>
+                        <a class="nav-link border" href="#e-section">e</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#f-section">f</a>
+                        <a class="nav-link border" href="#f-section">f</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#g-section">g</a>
+                        <a class="nav-link border" href="#g-section">g</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#h-section">h</a>
+                        <a class="nav-link border" href="#h-section">h</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#i-section">i</a>
+                        <a class="nav-link border" href="#i-section">i</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#j-section">j</a>
+                        <a class="nav-link border" href="#j-section">j</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#k-section">k</a>
+                        <a class="nav-link border" href="#k-section">k</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#l-section">l</a>
+                        <a class="nav-link border" href="#l-section">l</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#m-section">m</a>
+                        <a class="nav-link border" href="#m-section">m</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#n-section">n</a>
+                        <a class="nav-link border" href="#n-section">n</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#o-section">o</a>
+                        <a class="nav-link border" href="#o-section">o</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#p-section">p</a>
+                        <a class="nav-link border" href="#p-section">p</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#q-section">q</a>
+                        <a class="nav-link border" href="#q-section">q</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#r-section">r</a>
+                        <a class="nav-link border" href="#r-section">r</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#s-section">s</a>
+                        <a class="nav-link border" href="#s-section">s</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#t-section">t</a>
+                        <a class="nav-link border" href="#t-section">t</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#u-section">u</a>
+                        <a class="nav-link border" href="#u-section">u</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#v-section">v</a>
+                        <a class="nav-link border" href="#v-section">v</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#w-section">w</a>
+                        <a class="nav-link border" href="#w-section">w</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#x-section">x</a>
+                        <a class="nav-link border" href="#x-section">x</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#y-section">y</a>
+                        <a class="nav-link border" href="#y-section">y</a>
                       </li>
                       <li class="list-inline-item">
-                        <a class="nav-link" href="#z-section">z</a>
+                        <a class="nav-link border" href="#z-section">z</a>
                       </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <main class="glosary-content">
+    <main class="glosary-content z-0 pt-5 my-5">
         <div class="container">
             <div class="row">
                 <!-- A -->
