ajustes de tipografía

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="position-fixed w-100 z-3 mt-0 top-0">
         <nav class="navbar bg-body-tertiary">
             <div class="container">
-                <h1><a class="navbar-brand" href="#">Glosario</a></h1>
+                <h1 class="mb-0 py-2"><a class="navbar-brand" href="#">Glosario</a></h1>
                 <!-- modo oscuro -->
                 
-                <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+                <ul class="navbar-nav flex-row flex-wrap ms-auto pe-4">
                     <li class="nav-item dropdown dropdown-dark-theme">
                         <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme (light)">
                             <span class="ms-2" id="bd-theme-text">Modo</span>
